--- a/app/src/main/res/layout/animal_item.xml
+++ b/app/src/main/res/layout/animal_item.xml
@@ -45,10 +45,12 @@
         android:id="@+id/imageView"
         android:layout_width="127dp"
         android:layout_height="113dp"
+        android:layout_marginEnd="0dp"
         android:backgroundTintMode="src_in"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
